# misc

./: .gitignore  README.md  accounts.py  do.py  logfiles.py  logger.py  pyproject.toml  random_words.py  screenfill.py  xlmbalance.py
appbase/: CLAUDE.md  pyproject.toml
appbase/appbase/: app.py  config.py  database.py
appbase/src/appbase/: __init__.py  app.py  config.py  database.py  dbase.py  permissions.py  security.py  sqlstmt.py  statements.py  users.py
appbase/test/: test_config.py  test_database.py
encode/: __init__.py
expressions/: __init__.py
misc/: __init__.py  __main__.py  accounts.py  authtest.py  authtest_gemini.py  builder.py  call_log.py  call_log_cli.py  cli.py  dcsqlite.py  dispatch.py  docs.py  domainck.py  encdec.py  expressions.py  expressiontracing.py  filer.py  filer_cli.py  foobar.py  inotify.py  jinjatraceundefined.py  logfiles.py  logger.py  nmerge.py  notifications.py  openandwait.js  pdf.py  pdfutils.py  perfbar.py  pipe.py  progress.py  pytree.py  random_words.py  rename.py  screenfill.py  serbench.py  sesmail.py  stateful.py  stickers.py  textentry.py  (+4 more)
misc/abac/: core.py
misc/ai/: chat.py  clients.py  completers.py  composers.py  dalle3.py  game_component.py  image.py  messages.py  stickers.py  ttrpggen.py  ttrpgstate.py
misc/ai/chat/: __init__.py  __main__.py  _clients.py  _completers.py  _composers.py  chat.py  gen.py
misc/ai/wg/: __main__.py  gen.py  state.py  world.py
misc/lite/: database.py  dctable.py  pysql.py  qs.sql
misc/lite/model/: contact.py  permission.py  user.py
misc/misc/: accounts.py  pdf.py  progress.py  slashsearch.js  watch.py  xlmbalance.py
misc/monster/: monster.py  monstore.py
misc/parsing/: base.py
misc/path_indexing/: Scanning Paths.ipynb  __init__.py  fileindexer.py  fscan.py  fscan_cy.pyx  fsindex.py
misc/reload/: pyproject.toml  reload.py
misc/schematic/: bind.py  initialize.py  persist.py  schema.py  serialize.py  validate.py
misc/tracing/: dynamicmethods.py  getattributes.py  trace.py
misc/type_utils/: autoinit.py  casting.py  dispatch.py  records.py
syntax/: __init__.py
test/: test_expressions.py  test_stateful.py  test_tracing.py
test/test_abac/: test_basic_usage.py
test/test_lite/: test_crud.py
tracing/: getattributes.py
typeutils/: autoinit.py  casting.py  records.py  typedispatch.py
users/: chat.py  history.py
watch/: __init__.py  inotify.py
