[tool.poetry]
name = "misc"
version = "0.0.1"
description = "Various personal utilities."
authors = ["Aidan Courtney <aidanfc97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "*"
rich = "*"
pypdf = "*"
fastapi = "*"
textual = "*"
aiohttp = "*"
blessed = "*"
python-jose = "*"
passlib = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
