[tool.poetry]
name = "misc"
version = "0.0.1"
description = "Various personal utilities."
authors = ["Aidan Courtney <aidanfc97@gmail.com>"]
license = "MIT"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.10"
cyclopts = "*"
typer = "*"
rich = "*"
pypdf = "*"
fastapi = "*"
textual = "*"
aiohttp = "*"
blessed = "*"
python-jose = "*"
passlib = "*"

[tool.poetry.scripts]
misc = 'misc.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = 'py312'

[tool.pyright]
pythonVersion = '3.12'
