[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "misc"
version = "0.0.1"
description = "Various personal utilities."
readme = "README.md"
requires-python = ">=3.12"
license = {text="MIT"}
keywords = ["services", "booking", "professional", "website"]
authors = [
  {name = "Aidan Courtney", email = "contact@aidan.software" }
]
dependencies = [
  "cyclopts",
  "typer",
  "rich",
  "pypdf",
  "fastapi",
  "openai"
]

[project.optional-dependencies]
dev = ["pre-commit", "pyright", "ruff", "mypy"]
test = ["pytest", "coverage", "requests"]

[project.urls]
"Source" = "https://github.com/aidaco/misc/"

[project.scripts]
misc = 'misc.cli:cli'

[tool.setuptools]
packages = ["misc"]

[tool.ruff]
target-version = 'py312'

[tool.pyright]
pythonVersion = '3.12'
