[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "appbase"
version = "0.0.1-dev"
description = "appbase"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
keywords = ["appbase"]
authors = [
  {name = "Aidan Courtney", email = "contact@aidan.software" }
]
dependencies = [
  "rich",
  "platformdirs",
  "PyYAML",
  "toml",
  "pydantic",
  "cyclopts",
  "timedelta-isoformat",
  "argon2-cffi",
  "PyJWT",
  "requests",
  "python-multipart",
  "fastapi",
  "uvicorn"
]

[project.optional-dependencies]
dev = ["pre-commit", "pyright", "ruff", "mypy", "types-requests", "types-toml"]
test = ["pytest", "coverage"]

[project.urls]
"Source" = "https://github.com/aidaco/misc/appbase"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
target-version = 'py312'

[tool.pyright]
pythonVersion = '3.12'
