[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "appbase"
version = "0.0.1-dev"
description = "appbase"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT License"}
keywords = ["appbase"]
authors = [
  {name = "Aidan Courtney", email = "contact@aidan.software" }
]
dependencies = [
  "rich",
  "platformdirs",
  "PyYAML",
  "tomli-w",
  "pydantic",
  "cyclopts",
  "timedelta-isoformat",
  "argon2-cffi",
  "PyJWT",
  "requests",
  "python-multipart",
  "fastapi",
  "uvicorn"
]

[dependency-groups]
dev = ["ruff", "ty", "pre-commit"]
test = ["pytest", "coverage"]

[project.urls]
"Source" = "https://github.com/aidaco/misc/appbase"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.14"
