[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreload"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.1"  # REQUIRED, although can be dynamic
description = "Python reloader"
requires-python = ">=3.12"
authors = [ {name = "A. Courtney", email = "contact@aidan.software" } ]
maintainers = [ {name = "A. Courtney", email = "contact@aidan.software" } ]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ "rich" ]

[project.scripts]
reload = "reload:main"


[tool.setuptools]
package-data = {"sample" = ["*.dat"]}
